--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
+    "@expo-google-fonts/montserrat": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
@@ -21,7 +23,7 @@
     "expo": "~46.0.16",
     "expo-asset": "~8.6.1",
     "expo-constants": "~13.2.4",
-    "expo-font": "~10.2.1",
+    "expo-font": "~10.2.0",
     "expo-linking": "~3.2.2",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
@@ -33,6 +35,8 @@
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
