--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@reduxjs/toolkit": "^1.8.6",
     "@shopify/react-native-skia": "0.1.141",
+    "@types/react-redux": "^7.1.24",
     "expo": "~46.0.16",
     "expo-asset": "~8.6.1",
+    "expo-auth-session": "~3.7.1",
     "expo-constants": "~13.2.4",
     "expo-font": "~10.2.0",
     "expo-linking": "~3.2.2",
+    "expo-random": "~12.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
@@ -33,11 +37,14 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
